# sst-backend

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  ADMIN_NOTIFICATIONS.md  ADMIN_SETUP.md  CLAUDE.md  DATABASE_VALIDATION_REPORT.md  DEPLOYMENT.md  DEPLOY_README.md  Dockerfile  FIREBASE_PRODUCTION_CONFIG.md  Makefile  Matriz_Gerente_ Administrativo.md  README.md  README_ENTORNOS.md  README_SCRIPTS.md  VALIDATION_IMPROVEMENTS.md  VALOR LÍMITE PERMISIBLE (VLP).txt  admin.py  alembic.ini  backup.py  check_enum.py  check_enum2.py  check_lessonnav_enum.py  check_lessonstatus_enum.py  check_medical_enum.py  check_production_db.py  clean_alembic.py  create_admin.py  create_cargos.py  create_default_admin.py  create_default_roles.py  database.py  datos.txt  debug_progress.py  deploy.bat  deploy.py  deploy.sh  diagnostico_materiales.md  (+24 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
.trae/documents/: Alinear Matriz GTC 45 al Formato del Ejemplo.md  Exportar profesiograma por cargo a PDF con logo.md  Implementación Matriz GTC45 en Profesiogramas.md  Implementar módulo de Autoevaluación de Trabajo en Casa.md  (+5 more)
alembic/: env.py
app/: .gitignore  config.py  database.py  dependencies.py  main.py
attendance_lists/: .gitkeep
certificates/: .gitkeep
env/: pyvenv.cfg
medical_reports/: .gitkeep
security/: GUIA-MONITOREO-POSTGRESQL.md  README-SEGURIDAD-CONSOLIDADA.md  README-SOLUCION-INTRUSION.md  pg_hba.conf  postgresql.conf
static/: .gitkeep
tests/: conftest.py  test_email_templates.py
uploads/: .gitkeep  834ea447-a8d8-4d9d-be75-10a769afae13.txt
(+397 files in other folders)
